kubernetes/php-fpm-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-fpm
  namespace: testing
  labels:
    app: php-fpm
    layer: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-fpm
  template:
    metadata:
      labels:
        app: php-fpm 
    spec:
      serviceAccountName: php-fpm-service-account
      containers:
        - name: php-fpm
          image: public.ecr.aws/o6a6b5p9/application:php-fpm-v1
          ports:
            - containerPort: 9000
          volumeMounts:
          - name: php-fpm-config-volume
            mountPath: /etc/php/8.2/fpm/pool.d
          - name: migration-script-config-volume
            mountPath: /etc/config
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "/etc/config/migration-script.sh"]
      volumes:
      - name: php-fpm-config-volume
        configMap:
          name: php-fpm-config
      - name: migration-script-config-volume
        configMap:
          name: migration-script-config
---
kind: Service 
apiVersion: v1 
metadata:
  name: php-fpm
  namespace: testing
  labels:
    app: php-fpm
    layer: backend
spec:
  type: ClusterIP
  selector:
    app: php-fpm
  ports:
    - port: 9000
      targetPort: 9000
