kubernetes/httpd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-server
  namespace: testing
  labels:
    app: httpd-server
    layer: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd-server
  template:
    metadata:
      labels:
        app: httpd-server
    spec:
      containers:
        - name: httpd-server
          image: REPLACE_IMAGE
          ports:
            - containerPort: 80
          volumeMounts:
          - name: apache-httpd-config-volume
            mountPath: /usr/local/apache2/conf/extra
      volumes:
      - name: apache-httpd-config-volume
        configMap:
          name: apache-httpd-config

---
kind: Service 
apiVersion: v1 
metadata:
  name: httpd-server
  namespace: testing
  labels:
    app: httpd-server
    layer: backend
spec:
  type: ClusterIP
  selector:
    app: httpd-server
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-server-ingress
  namespace: testing
spec:
  rules:
  - host: httpd-server-api.acme.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-server
            port:
              number: 80
